--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@mui/lab": "^5.0.0-alpha.53",
     "@mui/material": "^5.0.6",
     "@mui/styles": "^5.0.2",
+    "@stripe/react-stripe-js": "^1.7.0",
+    "@stripe/stripe-js": "^1.26.0",
     "chart.js": "^3.5.1",
     "date-fns": "^2.25.0",
     "dotenv": "^16.0.0",
