--- a/package.json
+++ b/package.json
@@ -34,9 +34,11 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.0.4",
+    "react-currency-format": "^1.1.0",
     "react-dom": "^17.0.2",
     "react-dropzone-uploader": "^2.11.0",
     "react-perfect-scrollbar": "^1.5.8",
+    "stripe": "^8.222.0",
     "uuid": "^8.3.0",
     "yup": "^0.32.9"
   },
