--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "firebase": "^9.6.7",
     "formik": "^2.1.5",
     "history": "^5.0.0",
+    "moment": "^2.29.3",
     "next": "^12.0.3-canary.7",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
