--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "^17.0.2",
     "react-dropzone-uploader": "^2.11.0",
     "react-perfect-scrollbar": "^1.5.8",
+    "react-use-cart": "^1.13.0",
     "stripe": "^8.222.0",
     "uuid": "^8.3.0",
     "yup": "^0.32.9"
