--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
   },
   "devDependencies": {
     "eslint": "^7.32.0",
-    "eslint-config-next": "12.0.3-canary.7"
+    "eslint-config-next": "12.0.3-canary.7",
+    "babel-plugin-import": "^1.13.3",
+    "babel-plugin-styled-components": "^2.0.2"
   }
 }
