--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "formik": "^2.1.5",
     "history": "^5.0.0",
     "moment": "^2.29.3",
-    "next": "^12.2.3",
+    "next": "^12.2.4-canary.8",
     "nprogress": "^0.2.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
