--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,8 @@
 {
   "extends": "next/core-web-vitals",
-  "rules": {
-    "@next/next/no-img-element": "off",
-    "jsx-a11y/alt-text": "off",
-    "react/display-name": "off"
-  }
+  // "rules": {
+  //   "@next/next/no-img-element": "off",
+  //   "jsx-a11y/alt-text": "off",
+  //   "react/display-name": "off"
+  // }
 }
